<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameSelectionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_settings"
        android:id="@+id/question_number"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/player_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:id="@+id/playerName"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="20"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionNumberText"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/number_of_questions"/>
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:max="51"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/difficulty_selection" />

    <RadioGroup
        android:id="@+id/difficultySelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioAny"
            android:textColor="@color/colorWhite"
            android:text="@string/any_difficulty"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:id="@+id/radioEasy"
            android:text="@string/easy"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:id="@+id/radioMedium"
            android:text="@string/medium"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:id="@+id/radioHard"
            android:text="@string/hard"/>
    </RadioGroup>

    <Button
        android:id="@+id/createGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CustomButtonTheme"
        android:text="@string/create_game"/>




</androidx.appcompat.widget.LinearLayoutCompat>