<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/question_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_number_title"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/question_number"/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:id="@+id/progress_bar"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question_goes_here"
            android:textColor="@color/colorWhite" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_a" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_b" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_c" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_d" />
    </LinearLayout>




</RelativeLayout>