<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".Home">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="50pt"
        android:src="@drawable/trivia"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:theme="@style/CustomButtonTheme"
        android:id="@+id/play_game"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CustomButtonTheme"
        android:text="@string/recent_games"
        android:id="@+id/recent_games"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:theme="@style/CustomButtonTheme"
        android:textColor="@color/colorWhite"
        android:id="@+id/quit_game"/>

</androidx.appcompat.widget.LinearLayoutCompat>
