<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recent_games"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

    </LinearLayout>

    <ListView
        android:id="@+id/recent_game_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="false" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/empty_list_view"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/no_games_saved"
            android:textSize="18sp"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_a_new_game"
            android:theme="@style/CustomButtonTheme"
            android:id="@+id/new_game"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>